--- a/Teamply/Teamply/Screen/Home/mainHome/Home.storyboard
+++ b/Teamply/Teamply/Screen/Home/mainHome/Home.storyboard
@@ -61,13 +61,23 @@
                                                                 <rect key="frame" x="0.0" y="135" width="302" height="100"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Az1-2c-qi0">
-                                                                        <rect key="frame" x="0.0" y="26" width="42" height="21"/>
+                                                                        <rect key="frame" x="0.0" y="22" width="42" height="21"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3rQ-dI-qAN">
-                                                                        <rect key="frame" x="0.0" y="53" width="42" height="21"/>
+                                                                        <rect key="frame" x="53" y="53" width="42" height="21"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhE-fI-Qqv">
+                                                                        <rect key="frame" x="0.0" y="53" width="43" height="22"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="22" id="gMW-cU-4tT"/>
+                                                                            <constraint firstAttribute="width" constant="43" id="lEx-6U-EuR"/>
+                                                                        </constraints>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
@@ -75,10 +85,12 @@
                                                                 </subviews>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="100" id="9g1-XZ-2if"/>
-                                                                    <constraint firstItem="3rQ-dI-qAN" firstAttribute="leading" secondItem="AEx-l3-h3K" secondAttribute="leading" id="FHG-Pr-RbO"/>
                                                                     <constraint firstItem="Az1-2c-qi0" firstAttribute="leading" secondItem="AEx-l3-h3K" secondAttribute="leading" id="OLm-YO-AZe"/>
                                                                     <constraint firstAttribute="bottom" secondItem="3rQ-dI-qAN" secondAttribute="bottom" constant="26" id="Qbx-2X-ZFG"/>
-                                                                    <constraint firstItem="3rQ-dI-qAN" firstAttribute="top" secondItem="Az1-2c-qi0" secondAttribute="bottom" constant="6" id="uwf-9s-DRB"/>
+                                                                    <constraint firstItem="hhE-fI-Qqv" firstAttribute="leading" secondItem="AEx-l3-h3K" secondAttribute="leading" id="gyc-eP-VWK"/>
+                                                                    <constraint firstItem="3rQ-dI-qAN" firstAttribute="leading" secondItem="hhE-fI-Qqv" secondAttribute="trailing" constant="10" id="p3B-kc-WXE"/>
+                                                                    <constraint firstItem="hhE-fI-Qqv" firstAttribute="top" secondItem="Az1-2c-qi0" secondAttribute="bottom" constant="10" id="uVc-Wn-WUd"/>
+                                                                    <constraint firstItem="3rQ-dI-qAN" firstAttribute="top" secondItem="Az1-2c-qi0" secondAttribute="bottom" constant="10" id="uwf-9s-DRB"/>
                                                                 </constraints>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5r-oD-G0x">
@@ -87,6 +99,14 @@
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2nY-Dg-UOd">
+                                                                <rect key="frame" x="272" y="109" width="18" height="12"/>
+                                                                <color key="backgroundColor" name="team1"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="18" id="bmT-en-Bak"/>
+                                                                    <constraint firstAttribute="height" constant="12" id="yH3-Ah-L0p"/>
+                                                                </constraints>
+                                                            </view>
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <gestureRecognizers/>
@@ -96,9 +116,11 @@
                                                             <constraint firstItem="qhF-cS-xew" firstAttribute="leading" secondItem="sDT-FY-C1f" secondAttribute="leading" constant="-6" id="Lhf-N1-Q9z"/>
                                                             <constraint firstAttribute="height" constant="235" id="STs-KW-pr1"/>
                                                             <constraint firstItem="z5r-oD-G0x" firstAttribute="leading" secondItem="sDT-FY-C1f" secondAttribute="leading" id="b0d-ED-IV9"/>
+                                                            <constraint firstItem="2nY-Dg-UOd" firstAttribute="top" secondItem="sDT-FY-C1f" secondAttribute="top" constant="109" id="bMD-FF-LNT"/>
                                                             <constraint firstAttribute="trailing" secondItem="AEx-l3-h3K" secondAttribute="trailing" id="blV-W4-1qD"/>
                                                             <constraint firstAttribute="bottom" secondItem="AEx-l3-h3K" secondAttribute="bottom" id="eOw-iG-RxW"/>
                                                             <constraint firstItem="qhF-cS-xew" firstAttribute="top" secondItem="sDT-FY-C1f" secondAttribute="top" constant="135" id="g8G-6h-ywd"/>
+                                                            <constraint firstAttribute="trailing" secondItem="2nY-Dg-UOd" secondAttribute="trailing" constant="12" id="kC6-LV-k3W"/>
                                                             <constraint firstItem="z5r-oD-G0x" firstAttribute="top" secondItem="sDT-FY-C1f" secondAttribute="top" constant="20" id="wrT-3P-rEO"/>
                                                         </constraints>
                                                         <connections>
@@ -233,6 +255,8 @@
                         <outlet property="collectionViewHeight" destination="1Ol-Op-jGE" id="Ag0-mB-tw2"/>
                         <outlet property="projectCollectionView" destination="6xl-qr-6yP" id="Pcp-Lc-ijZ"/>
                         <outlet property="scheduleView" destination="Koa-na-bwM" id="Ed3-Ww-v4G"/>
+                        <outlet property="tagLabel" destination="hhE-fI-Qqv" id="Gky-5R-6kh"/>
+                        <outlet property="tagView" destination="2nY-Dg-UOd" id="GuM-RZ-znj"/>
                         <outlet property="todayDateLabel" destination="z5r-oD-G0x" id="kku-he-5XU"/>
                         <outlet property="todayPlanContentLabel" destination="hRh-Aw-vYk" id="cFp-Yo-Ba0"/>
                         <outlet property="todayPlanLabel" destination="Zuc-dS-eoG" id="NhC-fi-Pjn"/>
@@ -344,6 +368,9 @@
         </namedColor>
         <namedColor name="gray2">
             <color red="0.83300000429153442" green="0.83300000429153442" blue="0.83300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="team1">
+            <color red="1" green="0.3880000114440918" blue="0.21600000560283661" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
